# play1.1

./: .gitignore  DEVELOPMENT-NOTES.md  QUICK_START_TESTING.md  README.md  VECTOR_TESTING_GUIDE.md  build-script.sh  generate-test-data.js  index.html  package-lock.json  package.json  playwright.config.ts  prd1.1  setup-github-actions.sh  start.sh  tailwind.config.js  test-vector-operations.js  todo.md  todo1.1.md  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: README.md
docs/: AI-MENTOR-GUIDE.md  ARCHITECTURE.md  BUGFIX-AI-COMMANDS.md  BUILD-LOG.md  BUNDLED-PACKAGING.md  CHANGELOG-v1.0.1.md  CHANGELOG-v1.1.0.md  DEBUG-AI-CONNECTION.md  DISTRIBUTION-README.md  DMG-INSTALL-GUIDE.md  DMG-ISSUES-EXPLAINED.md  (+28 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: ai.rs  ai_insights.rs  ai_mentor_commands.rs  cleaning.rs  clear.rs  data_operations.rs  document_intelligence.rs  document_versions.rs  documents.rs  events.rs  files.rs  ics.rs  indexer.rs  ingestion.rs  lancedb.rs  links.rs  messages.rs  mod.rs  notifications.rs  settings.rs  setup.rs  tasks.rs  vector_database.rs  vector_search.rs
src-tauri/src/models/: cleaning.rs  document.rs  event.rs  ingestion.rs  message.rs  metadata.rs  mod.rs  task.rs  vector_index.rs
src-tauri/src/services/: ai_insights_service.rs  ai_mentor.rs  cleaning_service.rs  data_operations_service.rs  database.rs  document_intelligence_service.rs  embedded_ollama.rs  file_manager.rs  file_processor.rs  ics.rs  indexer.rs  ingestion_service.rs  lancedb_service.rs  links.rs  mod.rs  notifications.rs  ollama.rs  settings.rs  vector_search_service.rs
src-tauri/src/utils/: mod.rs
(+101 files in other folders)
