[package]
name = "play-mvp"
version = "1.1.0"
description = "Play - Offline-First Desktop Workspace"
authors = ["Play Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-all", "fs-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
zip = "1.1"
thiserror = "1.0"
mime_guess = "2.0"
# File processing dependencies
pdf-extract = "0.7"
docx-rs = "0.4"
calamine = "0.25"
html2text = "0.2"
pandoc = "0.8"
regex = "1.10"
lancedb = "0.22.2"
reqwest = { version = "0.12.23", features = ["json"] }
tokio-util = "0.7.16"
arrow = "56.2.0"
arrow-array = "56.2.0"
arrow-schema = "56.2.0"
dirs = "5.0"
bincode = "1.3"

# Additional async support
tokio-tungstenite = "0.21"

# Audio processing (Phase 3) - commented for now
# whisper-rs = "0.10"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Remove debug symbols

